Sprint v0.13.123+M-UI-1.1 Polishing Severity.classify Pathological-Values-Policy
Code-Reviewer-Offene-Frage aus Sprint v0.13.104+M-UI-1 (788de18) und v0.13.111+M-UI-3.1 (2006807) zur Severity.classify Pathological-Values-Policy entschieden. Variante A modified: still-silent-stale fuer harmlose Daten-Stale + laut-sichtbar fuer State-Bugs.

Subsummiert 3 Tasks (~30 LOC Sprint-Scope):
1. KpiSection.Severity.classify Policy-Fix — !isFinite(coverage) (schluckte -Infinity als OK) ersetzt durch Double.isNaN(coverage) || coverage == POSITIVE_INFINITY (lässt nur NaN + +Infinity still passieren; -Infinity, negative finite, exakt 0.0 und alle Coverage <0.3 klassifizieren CRITICAL). Javadoc-Block mit Begruendung erweitert.
2. KpiSectionTest.java erweitert — bestehender classify_negative_finite_returns_critical von 1 assertion (-0.5) auf 3 assertions-upgraded (-0.0001, -0.5 Sanity-Anchor, -100.0). NEU classify_double_min_value_returns_critical testet Double.MIN_VALUE (~4.9e-324) klassifiziert CRITICAL. 23 -> 24 Tests (+1 NEU; +2 Assertions im bestehenden).
3. baselines.yml KpiSection.java Re-Baseline (Rule 14 Pflicht, Sprint-modified) — fields=4 -> 5 dokumentiert; reason_at_emit-Konsistenz von "fields 4" auf "fields 5" korrigiert; baseline_update-Block erweitert mit Floor-Schutz _DRIFT_FLOOR=2 Begruendung.

Stam-Doc-Sync Rule 2: CHANGELOG.md Sprint-Header mit em-dash, Subsummierung 3 Tasks, Verification DoD 3/4 OK + 1 BLOCKER-DOKUMENTIERT-Out-of-Scope (Mockito-inline Java 21 CDS Compatibility-Blocker ehrlich aufgefuehrt statt fudge-changed; separates v0.13.124+M-UI-1.2 Sprint-Fix).

Verification DoD:
- mvn verify install -DskipTests -Dskip.bump=true -> BUILD SUCCESS
- bash tools/god-class-guard.sh --mode=hard -> 181 PASS / 0 WARN / 0 BLOCK
- bash tools/verify-doc-sync.sh -> PASS (11 Doc sync mit pom 0.13.101)
- mvn test -Dskip.bump=true -Dtest=KpiSectionTest -> 0/24 BLOCKED durch Mockito-inline Java 21 CDS-Blocker (separates Sprint-Fix)

🤖 Generated with Codebuff
Co-Authored-By: